Bug 303498 - connection error notification appears of google and facebook telepathy account on startup even though no internet connection exists yet
Summary: connection error notification appears of google and facebook telepathy accoun...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: kded-module (other bugs)
Version First Reported In: git-latest
Platform: Arch Linux Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-13 21:45 UTC by Johannes K.
Modified: 2012-12-11 20:50 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.2
Sentry Crash Report:
kde: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes K. 2012-07-13 21:45:19 UTC
I enabled the feature "Restore last presence on login" in the configure dialog.

This error message appears for the google and facebook telepathy account on start up

"There was a problem while trying to connect <my_google_email> - This capability is not available"

before my wireless internet connection is established. This happens on every startup...

Additionally once my internet connection is ready they stay with the status "connection" and don't change to "Available".
My ICQ Account don't throw an error thought and connects without problems after the internet connection is established.

Reproducible: Always



Expected Results:  
It should wait until the internet connection is ready and only than try to connect.
Comment 1 David Edmundson 2012-07-13 21:55:10 UTC
Can you double confirm you're using the git-latest ktp-kded-module?

A patch was made after 0.4 which hopefully reduces this issue.
Comment 2 Johannes K. 2012-07-14 07:27:44 UTC
Hi David

Yes I do. Updated and compiled it yesterday.
Thanks for your quick reply.
Comment 3 Johannes K. 2012-07-14 07:48:10 UTC
Hi David

I just had a look to your commit in ktp-kded-module.
According to my error message the case block uses the default case but your if block is only in the Tp::ConnectionStatusReasonNetworkError.
Could you explain me how to debug this with gdb? I really would like to know what value the variable "reason" has.
Thanks a lot.
btw...won't be able to answer you before this evening.
Comment 4 David Edmundson 2012-09-21 14:25:12 UTC
Well that error would show (so confirming this bug)

Martin, would you be happy if we just suppress _all_ error notifications if the network is down?

It would solve this issue, and I can't think of any real-use drawbacks.
Comment 5 Martin Klapetek 2012-09-26 10:30:04 UTC
If we can exclude those errors that are a result of user trying to connect (ie. network is down, user tries to go online), then yes.
Comment 6 Andreas Sturmlechner 2012-11-25 18:58:37 UTC
I'm plagued by the same behaviour since installing an SSD that simply fires up the system too fast for any wireless connection to be ready in time. ;) kde-telepathy 0.5.1 packages and wicd-client here.
Comment 7 David Edmundson 2012-12-10 02:59:00 UTC
The fact that you're using wicd is the problem here.
Mission-Control (the backend for Telepathy) is network-manager aware not wicd aware..it has no idea if we're online or not - so it will try and connect. 

KDE is wicd aware (as well as NM) when we get an error from the backends with the proposed patch we will supress it, and not bug the user. 

(https://git.reviewboard.kde.org/r/107654/)
Comment 8 David Edmundson 2012-12-11 20:26:36 UTC
Git commit 7d1013500e22cf5deb362852abaedd852bc08186 by David Edmundson.
Committed on 10/12/2012 at 01:20.
Pushed by davidedmundson into branch 'kde-telepathy-0.5'.

Supress all errors unless we are connected to the network
REVIEW: 107654

M  +6    -4    error-handler.cpp

http://commits.kde.org/telepathy-kded-module/7d1013500e22cf5deb362852abaedd852bc08186
Comment 9 David Edmundson 2012-12-11 20:26:42 UTC
Git commit 69c307cfded70fd820119b328ab5650e38c22c23 by David Edmundson.
Committed on 10/12/2012 at 01:20.
Pushed by davidedmundson into branch 'master'.

Supress all errors unless we are connected to the network
REVIEW: 107654

Conflicts:
	error-handler.cpp

M  +6    -4    error-handler.cpp

http://commits.kde.org/telepathy-kded-module/69c307cfded70fd820119b328ab5650e38c22c23
Comment 10 David Edmundson 2012-12-11 20:50:38 UTC
Marking as fixed, though you may still get popups when the internet connection is dodgy.

Such as at an airport or hotel where you are connected but need to sign in to a wi-fi network.