Supress all errors unless we are connected to the network

BUG: 303498
REVIEW: 107654

Conflicts:
	error-handler.cpp